--- a/css/default.css
+++ b/css/default.css
@@ -174,8 +174,10 @@ h6 { font-size: 14px; line-height: 30px; }
 p { margin: 0 0 30px 0; }
 p img { margin: 0; }
 p.lead {
-   font: 18px/33px 'opensans-light', sans-serif;
+   font: 20px/33px 'opensans-light', sans-serif;
    margin-bottom: 18px;
+   color: #93b876;
+   font-weight: bold;
 }
 
 /* for 'em' and 'strong' tags, font-size and line-height should be same with
@@ -811,4 +813,11 @@ border-radius: 20px;
 iframe{
   height: 800px;
   width: 100%;
+}
+
+.tab {
+  text-indent: 5%;
+}
+.definitions{
+  text-align: center;
 }
